# InferBench-Linux

./: .gitignore  CMakeLists.txt  Code_Quality_Standards.md  Delivery_Standards.md  Product_Requirements_Document.md  Project_Schedule.md  README.md  implementation_plan.md  output.txt  task.md
.github/workflows/: ci.yml
cmake/: arm-linux.toolchain.cmake
include/: BenchmarkRunner.h  InferenceEngine.h  SystemMonitor.h
scripts/: benchmark_suite.py  mem_check.sh  setup_deps.sh
src/: BenchmarkRunner.cpp  InferenceEngine.cpp  SystemMonitor.cpp  main.cpp  test_ort.cpp
tests/: test_benchmark.cpp  test_inference.cpp  test_main.cpp  test_monitor.cpp  test_watchdog.cpp
